--- a/angular_components/lib/material_chips/material_chip.html
+++ b/angular_components/lib/material_chips/material_chip.html
@@ -16,10 +16,7 @@
     (trigger)="removeChip"
     [attr.aria-label]="deleteButtonAriaMessage"
     [attr.aria-describedby]="uuid">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-      class="delete-icon">
-        <path d="M12 2c-5.53 0-10 4.47-10 10s4.47 10 10 10 10-4.47 10-10-4.47-10-10-10zm5
-                 13.59l-1.41 1.41-3.59-3.59-3.59 3.59-1.41-1.41 3.59-3.59-3.59-3.59 1.41-1.41 3.59
-                 3.59 3.59-3.59 1.41 1.41-3.59 3.59 3.59 3.59z"/>
-  </svg>
+  
+    <!--DO not submit this we should handle the close icon directly inside lefty-chip-->
+  <material-icon icon="close" class="delete-icon"></material-icon>
 </div>
